@@ -11,27 +11,28 @@ import numpy as np
 #@Initialize_date: 16-02-2017
 #@Updates:  - [18-02-2017]: Added profit attribute to classes ShortTerm and LongTerm
 #           - [22-02-2017]: Attributes updates + add compoundedInterest() + Draw a plot for a bond
+#           - [23-02-2017]: Add function getMinAmount()
 #TODO: - Check the minimum Amount and Term
 
 
 class Bond(object):
     def __init__(self, amount, term):
-        self.amount = amount
-        self.term = term
-        self.mTerm = 0
-        self.mAmount = 0
-        self.interest = 0
+        self._amount = amount
+        self._term = term
+        self._mTerm = 0
+        self._mAmount = 0
+        self._interest = 0
 
         self.checkValue() # Check the minimum value f
 
 
 
     def checkValue(self):
-        if(self.amount < self.mAmount):
-            self.amount = self.mAmount
+        if(self._amount < self._mAmount):
+            self._amount = self._mAmount
 
-        if (self.term < self.mTerm):
-            self.term = self.mTerm
+        if (self._term < self._mTerm):
+            self._term = self._mTerm
 
 
 
@@ -43,14 +44,25 @@ class Bond(object):
 
     def interestSeries(self):
         seriesI = []
-        for i in range(1,self.term):
+        for i in range(0,self._term):
             seriesI.append(self.coumpoundedInterest(i))
 
         return seriesI
 
+    def interestSeriesByTime(self, Period):
+        seriesI = []
+        for i in range(0, Period):
+            seriesI.append(self.coumpoundedInterest(i))
+
+        return seriesI
 
     def coumpoundedInterest(self, time):
-        return self.amount * ( 1 + self.interest)**time
+        return self._amount * ( 1 + self._interest)**time
+
+
+    # GETTER & SETTER
+    def getMinAmount(self):
+        return self._mAmount
 
 #------
 
@@ -59,9 +71,9 @@ class Bond(object):
 class ShortTerm(Bond):
     def __init__(self, amount, term):
         super(ShortTerm, self).__init__(amount, term)
-        self.mTerm = 2          # in years
-        self.mAmount = 1000
-        self.interest = 0.01
+        self._mTerm = 2          # in years
+        self._mAmount = 1000
+        self._interest = 0.01
 
 
 # Long Term Bond, extends Bond
@@ -69,7 +81,7 @@ class ShortTerm(Bond):
 class LongTerm(Bond):
     def __init__(self, amount, term):
         super(LongTerm, self).__init__(amount, term)
-        self.mTerm = 5          # in years
-        self.mAmount = 3000
-        self.interest = 0.03
+        self._mTerm = 5          # in years
+        self._mAmount = 3000
+        self._interest = 0.03
 
