@@ -2,7 +2,7 @@ import pandas_datareader.data as web
 import datetime
 from matplotlib import style
 import matplotlib.pyplot as plt
-import os
+
 
 ####################################
 #           Stock Class            #
@@ -11,6 +11,7 @@ import os
 #@Aim: Represent a stock on a market
 #@Initialize_date: 16-02-2017
 #@Updates:      - [22-02-2017] : Manage the datas get back and draw plot
+#               - [23-02-2017]: add functions => selectDayPrice(), maxStockAvailable(), amountInvest()
 
 class Stock(object):
 
@@ -20,13 +21,22 @@ class Stock(object):
         self.sStartDate = startDate     # Date when they bought the stock
         self.sEndDate = endDate
 
-        sDate = str.split(startDate,'/')
-        eDate = str.split(endDate, '/')
+        self.sDate = str.split(startDate,'/')
+        self.eDate = str.split(endDate, '/')
 
-        start = datetime.datetime(int(sDate[2]), int(sDate[1]), int(sDate[0]))
-        end = datetime.datetime(int(eDate[2]), int(eDate[1]), int(eDate[0]))
+        self.start = datetime.datetime(int(self.sDate[2]), int(self.sDate[1]), int(self.sDate[0]))
+        self.end = datetime.datetime(int(self.eDate[2]), int(self.eDate[1]), int(self.eDate[0]))
 
-        self.data = web.DataReader(ticker, 'yahoo', start, end)['High']
+        self.data = web.DataReader(ticker, 'google', self.start, self.end)
+
+        dates = []
+
+        for x in range(len(self.data )):
+            newdate = str(self.data .index[x])
+            newdate = newdate[0:10]
+            dates.append(newdate)
+
+        self.data['Dates'] = dates
 
 
 
@@ -34,3 +44,20 @@ class Stock(object):
         style.use('fivethirtyeight')
         self.data['High'].plot()
         plt.show()
+
+
+    def selectDayPrice(self):
+        return (self.data.ix[self.data['Dates'][0]]['Close'])
+
+
+    def maxStockAvailable(self, budget):
+        #First find price
+        #dayPrice = self.data.ix[self.sDate[2] + '-' + self.sDate[1] + '-' + self.sDate[0]]['Close']
+        dayPrice = self.selectDayPrice()
+        #print('day price = '+ str(dayPrice))
+
+        return int(budget/dayPrice)
+
+
+    def amountInvest(self):
+        return self.sNumberB * self.selectDayPrice()
